fix: Adjust colors for legibility

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 :root {
   font-size: 16px;
   font-family: "robotoregular", "Courier New", Courier, monospace;
-  --accent: #0891b2ff;
+  --accent: #065A6F;
 }
 
 * {
@@ -32,6 +32,10 @@ body {
 
 .icon-links > a {
   color: black;
+}
+
+footer .icon-links > a {
+  color: white;
 }
 
 /* General Header */
